--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Techy stuff
+title: Stuff by @fer-rum
 #email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
-    Stuff that @fer-rum writes about techy things.
+    Stuff that @fer-rum writes about things.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
